# DSP_C

./: CMakeLists.txt  CMakePresets.json  global.h  hello_world.cpp  hello_world_Anpassung_GPT.cpp  hello_world_OG.cpp  hello_world_circ_buffer.cpp  hello_world_circ_buffer.h  hello_world_config.h  hello_world_overlap.cpp
Archiv/: hello_world_10.cpp  hello_world_11.cpp  hello_world_12.cpp  hello_world_14.cpp  hello_world_3.cpp  hello_world_4.cpp  hello_world_5.cpp  hello_world_6.cpp  hello_world_7.cpp  hello_world_8.cpp  hello_world_9.cpp  hello_world__13.cpp
Good_Archiv/: hello_world_(1).cpp  hello_world_.cpp  hello_world_15.cpp  hello_world_2.5.cpp  hello_world_3.0.cpp  hello_world_CFAR_Start-Ende-Erkennung.cpp  hello_world_CFAR_Start_erkennung.cpp  hello_world_Final.cpp  hello_world_Gemini.cpp  hello_world_commented.cpp  hello_world_hope.cpp  hello_world_testphase.cpp  hello_world_v1.cpp
PDL/: system_s6e2cc.h
cmake/: common_settings.cmake  toolchain_arm-none-eabi-gcc-13.3.Rel1.cmake  utils.cmake
device/: S6E2CCAJOA.ld.cc  device_config.h  startup_S6E2CCAJOA.c
python code/: interleaven.py
utils/: crt_dummy_syscalls.c  debug_utils.cpp  debug_utils.h  platform.cpp  platform.h  utils.cpp  utils.h
